# mini-rag-app

./: .env.example  .gitignore  pyproject.toml
docker/: docker-compose.yml
src/: debug.py  main.py
src/helpers/: config.py  utils.py
src/models/: __init__.py  base_data_model.py  data_chunk_model.py  project_model.py
src/models/db_schemas/: __init__.py  data_chunk_schema.py  project_schema.py
src/models/enums/: DBCollectionsEnum.py  ExtensionEnum.py  ResponseEnum.py  ResponseEnums.py
src/routes/: base.py  data.py
src/schemas/: DataSchema.py  __init__.py
src/views/: BaseView.py  DataView.py  ProcessView.py  ProjectView.py  __init__.py
